sos-jitl - new controller api, arguments - support enum type and arguments from superclass, job error stacktrace, job log_level, info job